# ai-tauri-react-shadcn

./: .env  .gitignore  .prettierignore  Cargo.toml  LICENSE  Makefile  README.md  biome.json  eslint.config.bak.js  eslint.config.js  index.html  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.app.json  vite.config.ts
.husky/: commit-msg
crates/common/: Cargo.toml
crates/common/src/: code.rs  download.rs  env.rs  files.rs  lib.rs  response.rs
crates/web_server/: Cargo.toml
crates/web_server/src/: lib.rs  main.rs  migration.rs  routes.rs
crates/web_server/src/controller/: download.rs  mod.rs  root.rs
crates/web_server/src/service/: chat.rs  dashboard.rs  message.rs  metadata_info.rs  mod.rs
crates/web_server/src/templates/analyze/public/: app.json
crates/web_server/src/templates/analyze/src/components/recharts/: index.tsx
crates/web_server/src/templates/analyze/src/components/ui/: button.tsx
crates/web_server/src/templates/analyze/src/pages/: index.tsx
crates/web_server/src/utils/: app.rs  common.rs  config.rs  error.rs  mod.rs  tracing.rs
crates/web_server/templates/: root.html
crates/web_server/templates/react/pages/: types.ts
crates/web_server/templates/react/pages/charts/: data.ts
crates/web_server/templates/react/project/: biome.json  package.json
crates/web_server/templates/react/project/public/: dashboard.json  metadatas.json
crates/web_server/templates/react/project/src/: types.ts
crates/web_server/templates/react/project/src/components/chart/table/: index.tsx
crates/web_server/templates/react/project/src/components/dashboard/: dashboard.tsx
crates/web_server/templates/react/project/src/components/recharts/: bar.tsx
crates/web_server/templates/react/project/src/components/ui/: chart.tsx
crates/web_server/templates/react/project/src/pages/: index.tsx
crates/web_server/templates/react/project/src/utils/: fetcher.ts  index.ts  utils.ts
crates/web_server_entity/: Cargo.toml
crates/web_server_entity/src/: chat.rs  daily_summary.rs  dashboard.rs  lib.rs  message.rs  metadata_info.rs  order_product_details.rs  post.rs  prelude.rs  user.rs  vote.rs
crates/web_server_migration/: Cargo.toml
crates/web_server_migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250423_071917_generate.rs  m20250426_092940_daily_summary.rs  m20250426_093200_chat.rs  m20250426_102845_message.rs  m20250426_103442_order_product_details.rs  m20250426_112536_user.rs  m20250426_113943_vote.rs  main.rs
scripts/: binaries.js
server/: database.db  package.json  pnpm-lock.yaml  tsconfig.json
server/src/: global.d.ts  server.ts
server/src/config/: config.default.ts  index.ts  types.ts
server/src/controllers/: index.ts  llm.ts  user.ts
server/src/database/: migrate.ts  schema.ts
server/src/decorates/: errors.ts  index.ts  result.ts  sqlite.ts
server/src/schemas/: index.ts  llm.ts  user.ts
server/src/services/: llm.ts  user.ts
server/src/utils/: fastify.ts  index.ts  logger.ts
src/: app.tsx  index.css  services.ts  types.ts  utils.ts  vite-env.d.ts
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/template/: index.html
src-tauri/src/: lib.rs  web_server.rs
src-tauri/src/map_server/: command.rs
src-tauri/src/utils/: files.rs  log.rs  mod.rs  window.rs
src/components/: analyze.tsx  app-sidebar.tsx  chart-area-interactive.tsx  copy-2-clipboard.tsx  index.ts  login-form.tsx  multimodal-input.tsx  sidebar-history-item.tsx  sidebar-history.tsx  sidebar-toggle.tsx  sidebar-user-nav.tsx  suggested-actions.tsx
src/components/artifact/: artifact-close-button.tsx  artifact-messages.tsx  artifact.tsx
src/components/chart/: index.tsx  utils.tsx
src/components/chat/: chat-bar.tsx  chat-header.tsx  chat-provider.tsx  chat-setting.tsx  chat.tsx
src/components/code/: code-block.tsx  code-editor.tsx
src/components/codemirror/: code-editor.tsx  utils.ts
src/components/csv-eader/: csv-reader.tsx
src/components/dashboard/: dashboard-actions.tsx  dashboard.tsx  hooks.ts  progress-card.tsx
src/components/g2-hart/: g2-chart.tsx  index.ts
src/components/icons/: icons.tsx
src/components/map-kit/: map.ts
src/components/map-renderer/: map-renderer.ts
src/components/map-ui/: map.tsx
src/components/markdown/: markdown-view.tsx  markdown.tsx
src/components/markdown-view/: markdown-base.tsx  markdown-view.tsx
src/components/message-render/: index.tsx
src/components/messages/: message-actions.tsx  message-editor.tsx  message-reasoning.tsx  message.tsx  messages.tsx
src/components/progress-card/: index.tsx
src/hooks/: use-artifact.ts  use-chat-visibility.ts  use-chatbar-loader.ts  use-loader.ts  use-scroll-to-bottom.ts
src/layout/: index.tsx
src/lib/: constant.ts
src/pages/: chat.tsx  map.tsx
src/router/: index.tsx
src/stores/: app.ts  theme.ts
src/utils/: chat.ts  fetcher.ts  index.ts  loader.ts  storage.ts  tauri.ts
types/: index.ts
workspace/db/: database.db  databaseseaorm.db
workspace/vector/: config.yaml
(+41 files in other folders)
