[workspace]
resolver = "3"
members = [ 
    "src-tauri", 
    "crates/common",  
    "crates/web_server", 
    "crates/web_server_migration", 
    "crates/web_server_entity"
]


[workspace.package]
rust-version = "1.85.1"
edition = "2024"
repository = "https://github.com/fantienan/ai-tauri-react-shadcn"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlite-compressions = { version = "0.3", default-features = false, features = ["bsdiffraw", "gzip"] }
sqlite-hashes = { version = "0.9.0", default-features = false, features = ["md5", "aggregate", "hex"] }
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio"] }
zip = "2.2.2"
walkdir = "2"
futures = "0.3"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = {version = "0.7.14", features = [ "full"]}
anyhow = "1.0.98"
dotenv-flow = "0.16.2"
log = "0.4"
sea-orm = {version = "1.1.10", features = ["sqlx-sqlite", "macros", "runtime-tokio-rustls"]}
sea-orm-migration = {version = "1.1.10"}
thiserror = "2.0.12"