[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
common = { path = "../crates/common" }
tauri = { version = "2.5.0", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
serde = {workspace = true}
serde_json = {workspace = true}
log = "0.4"
once_cell = "1.20.2"
shapefile = "0.7.0"
thiserror = "2.0.12"
futures = {workspace = true}
tokio = {workspace = true}
tokio-util ={workspace = true}
num_cpus = "1.0"
regex = {version = "1.3", features = ["std"] }
wkt = "0.12.0"
geojson = "0.24"
indicatif = "0.17.11"
geo-types = "0.7.15"
zip = {workspace = true}
walkdir={workspace = true}
sqlx = {workspace = true}
axum = "0.8.3"
# martin = "0.14.2"
# gdal = "0.18.0"
# libsqlite3-sys = { version = ">=0.27", features = ["bundled"] }
# proj = "0.28.0"
# actix-web = "4.9.0"
# geo = "0.29.3"
# anyhow = "1.0"