[package]
name = "web_server"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
axum = "0.8.3"
tracing-subscriber = "0.3.19"
tokio = {workspace = true}
serde = {workspace = true}
common = { path = "../common" }
log = {workspace = true}
