[package]
name = "web_server"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
axum = "0.8.3"
tokio-util ={workspace = true}
tokio = {workspace = true}
serde = {workspace = true}
common = { path = "../common" }
log = {workspace = true}

# 日志相关
tracing-subscriber = {version = "0.3.19", features = ["fmt", "env-filter", "json"]}
tracing = "0.1.41"
tower-http = { version = "0.6.2", features = ["full"] }
local-ip-address = "0.6.3"
percent-encoding = "2.3.1"
sea-orm = "1.1.10"
